--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
-2z<!DOCTYPE html>
+2z
+<!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <title>gkgkgkgk</title>
+    <title>Tema Rock</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -20,37 +22,37 @@
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
-            </ul>          
+            </ul>
         </nav>
-       
     </header>
-
 
     <main class="container my-5">
 
         <section id="inicio" class="my-5">
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
-                    <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
+                    <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas ao mundo do Rock </h1>
                     <img src="img/logo-2.png" alt="Logotipo secundário da Tropicália" class="mb-3" width="563"
                         height="278" loading="lazy">
-                    <a href="#tropicalia"
-                        class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
+                    <a href="#tropicalia" class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
-                </div>
-
+                    </div>
+                        <img src="img/ACDC_Logo.jpg"
+                        class = "img-fluid img-inicio">
             </div>
         </section>
 
-        <section id="tropicalia" class="my-5 pt-6 secao-tropicalia">
+        <section id="tropicalia" class="my-5 pt-6 secao-tropicalia" taindex="0" aria-label="Seção 
+        explicativa sobre a tropicália">
             <div class="container d-flex align-items-center ">
-                  <div class="col-5">
-                    <h2>O que foi a Tropicália?</h2>
-                    <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
-                        brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
-                        abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
-                        teve como principal característica a mistura de elementos da cultura brasileira tradicional com
-                        influências estrangeiras, especialmente do rock e da música pop.</p>
+                <div class="col-5">
+                    <h2>O que é e o que foi o Rock?</h2>
+                    <p class="p-2">"O rock é um gênero musical que nasceu na década de 50 nos Estados Unidos e teve seu
+                        auge nas décadas de 70 e 80 em todo o mundo. Elvis Presley, The Beatles, Led Zeppelin, Queen,
+                        Metallica e Guns n’ Roses são alguns dos principais nomes do rock.
+                        Gênero musical adorado por fãs, o rock conta com o som da guitarra elétrica como sua marca
+                        registrada. Também é considerado um estilo de vida e uma forma de atitude e comportamento."
+                    </p>
                 </div>
             </div>
         </section>
