--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-2z
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -8,8 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <title>Tema Rock</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 
