--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class=" p-5">
 
         <nav class="container d-flex justify-content-between align-items-center">
-            <img src="img/logo.png" alt="Logotipo da Tropicália" class="nav-img " loading="lazy">
+            <img src="img/ACDC_Logo.jpg" alt="Logotipo da Tropicália" class="nav-img " loading="lazy">
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
@@ -30,7 +30,7 @@
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas ao mundo do Rock </h1>
-                    <img src="img/logo-2.png" alt="Logotipo secundário da Tropicália" class="mb-3" width="563"
+                    <img src="img/ACDC_SHOW.jpg" alt="Logotipo secundário da Tropicália" class="mb-3" width="563"
                         height="278" loading="lazy">
                     <a href="#tropicalia" class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
